functions and methods

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     You Don't Know Javascript Chapter 2 Practice (Open console)
+    <div>
+    <button onClick="sayHi()">Say Hi</button>
+    <button onClick="sayHello()">Say Hello</button>
+    <button onClick="sayBye()">Say Bye</button>
+    </div>
 </body>
 </html>
